# web4ai

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  design-spec.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: ci.yml
dashboard/: index.html
dashboard/marketing/: channels.json  index.html
dashboard/testing/: index.html  results.json
dashboard/testing/snapshots/: ajax_search.json  books_listing.json  firecrawl_vs_tavily.json  get_search_form.json  in_page_tab.json  post_form_csrf.json  static_article.json
docs/tutorials/: extract-any-url-in-30-seconds.md
golden/: corpus.yaml
schemas/: act-request.json  action.json  common.json  extract-request.json  extract-response.json  job-response.json  mcp-tools.json
scripts/dashboard/: run_corpus.py
src/: index.ts
src/web4ai/: __init__.py  cli.py  models.py  server.py  settings.py
src/web4ai/api/: app.py
src/web4ai/api/routes/: extract.py
src/web4ai/cache/: store.py
src/web4ai/extractor/: cached.py  hybrid.py  static.py
src/web4ai/pipeline/: actions.py  content_errors.py  fetch.py  markdown.py  render.py  router.py
tests/: conftest.py  golden_corpus.py  test_actions.py  test_api.py  test_cache.py  test_content_errors.py  test_golden_corpus.py  test_hybrid.py  test_integration.py  test_markdown.py  test_router.py  test_server_settings.py  test_static_extractor.py
tests/fixtures/: books_listing.html  hn_item.html  in_page_tab.html  quotes_search.html  simple_article.html  spa_shell.html
